main/Main ui 수정

--- a/reactStudy/shop-test/src/item/ItemDtl.css
+++ b/reactStudy/shop-test/src/item/ItemDtl.css
@@ -76,6 +76,6 @@ tr, td{
 .text-right{
     text-align: right;
 }
-.container{
+/* .container{
     background-color: rgba( 135, 206, 235, 0.3 );
-}
+} */
