--- a/reactStudy/shop-test/src/main/Main.css
+++ b/reactStudy/shop-test/src/main/Main.css
@@ -1,12 +1,22 @@
 img {
-    height: 300px;
+    height: 200px;
+    width: 190px;
   }
 .card{
-    width: 300px;
-    height: 500px;
-    margin: 5px 5px 5px 5px;
+    width: 263px;
+    height: 400px;
+    padding: 5px;
+    margin-bottom: 20px;
+    margin-right: 5px;
 }
 .row{
-    margin: 0 auto;
+    margin: auto;
     text-align: center;
+}
+.container{
+    width: 950px;
+    font-family: 'Noto Sans KR', sans-serif;
+}
+.col{
+    margin: auto;
 }
