--- a/reactStudy/shop-test/src/item/ItemDtl.css
+++ b/reactStudy/shop-test/src/item/ItemDtl.css
@@ -2,19 +2,19 @@
     margin-bottom:15px;
 }
 .mgt-30{
-    margin-top:30px;
+    margin-top:100px;
 }
 .mgt-50{
     margin-top:50px;
 }
 .repImgDiv{
-    padding:20px;
+    padding:10px;
     margin-right:25px;
     height:350px;
     width:300px;
 }
 .repImg{
-    width:100%;
+    width:270px;
     height:350px;
 }
 .wd50{
@@ -76,6 +76,11 @@ tr, td{
 .text-right{
     text-align: right;
 }
-/* .container{
-    background-color: rgba( 135, 206, 235, 0.3 );
-} */
+.itemDtlExplain{
+    background-color: rgb(170, 209, 209, 0.3);
+    padding: 20px;
+}
+.itemDtlImg{
+    width: 250px;
+    height: 330px;
+}
