--- a/reactStudy/shop-test/src/main/Main.css
+++ b/reactStudy/shop-test/src/main/Main.css
@@ -1,10 +1,6 @@
-img {
-    height: 200px;
-    width: 190px;
-  }
 .card{
     width: 263px;
-    height: 400px;
+    height: 450px;
     padding: 5px;
     margin-bottom: 20px;
     margin-right: 5px;
@@ -19,4 +15,13 @@ img {
 }
 .col{
     margin: auto;
+}
+.card-img-top{
+    width: 250px;
+    height: 250px;
+}
+.card-body{
+    padding: 30px;
+    width: 250px;
+    height: 10px;
 }
