메인. 상품등록, 상품관리 ui 수정

--- a/reactStudy/shop-test/src/item/ItemDtl.css
+++ b/reactStudy/shop-test/src/item/ItemDtl.css
@@ -81,6 +81,10 @@ tr, td{
     padding: 20px;
 }
 .itemDtlImg{
-    width: 250px;
+    width: 270px;
     height: 330px;
+}
+.itemFormContainer{
+    width: 950px;
+    margin: auto;
 }
