--- a/reactStudy/shop-test/src/cart/CartList.css
+++ b/reactStudy/shop-test/src/cart/CartList.css
@@ -6,12 +6,16 @@
 }
 .repImgDiv{
     margin-right:15px;
-    margin-left:15px;
+    margin-left:5px;
     height:auto;
 }
-.repImg{
+.cartImg{
     height:100px;
     width:100px;
+    margin-left: 50px;
+    margin-right: 50px;
+    border-radius: 10px;
+
 }
 .fs18{
     font-size:18px
@@ -20,11 +24,13 @@
     font-size:24px
 }
 .table{
-    width: 1000px;
+    width: 950px;
 }
-tr, td{
+.cartContainer{
+    width: 950px;
+    margin: auto;
+}
+.tr1{
     text-align: center;
-}
-.cartList{
     margin: auto;
 }
