--- a/reactStudy/shop-test/src/fragment/Header.css
+++ b/reactStudy/shop-test/src/fragment/Header.css
@@ -3,6 +3,11 @@ nav{
     margin: auto;
     margin-bottom: 20px;
 }
-h1{
+.titleHeader{
     text-align: center;
+    padding-top: 30px;
+    padding-bottom: 10px;
+}
+.title{
+    color: black;
 }
