--- a/reactStudy/shop-test/src/login/Join.css
+++ b/reactStudy/shop-test/src/login/Join.css
@@ -1,4 +1,13 @@
-.joinForm{
-    width: 1000px;
+.JoinForm{
+    margin: auto;
+    width: 400px;
+    padding: 20px;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+}
+.error {
+    color: #bd2130;
+}
+.joinContainer{
+    width: 950px;
     margin: auto;
 }
