--- a/reactStudy/shop-test/src/login/Login.css
+++ b/reactStudy/shop-test/src/login/Login.css
@@ -1,7 +1,13 @@
 .loginForm{
     margin: auto;
-    width: 300px;
+    width: 400px;
+    padding: 20px;
+    border: 1px solid rgba(0, 0, 0, 0.2);
 }
 .error {
     color: #bd2130;
+}
+.loginContainer{
+    width: 950px;
+    margin: auto;
 }
