장바구니 ui 완료

--- a/reactStudy/shop-test/src/item/ItemDtl.css
+++ b/reactStudy/shop-test/src/item/ItemDtl.css
@@ -43,10 +43,10 @@
     display:block;
 }
 
-tr, td{
+/* tr, td{
     text-align: left;
     width : 900px;
-}
+} */
 
 .btn-1 {
     background-color: white;
