--- a/reactStudy/shop-test/src/main/Main.css
+++ b/reactStudy/shop-test/src/main/Main.css
@@ -2,15 +2,16 @@
     width: 263px;
     height: 450px;
     padding: 5px;
-    margin-bottom: 20px;
-    margin-right: 5px;
+    margin-right: 45px;
+    margin-bottom: 30px;
 }
-.row{
-    margin: auto;
+.mainRow{
     text-align: center;
+    margin: auto;
 }
 .mainContainer{
     width: 950px;
+    margin: auto;
     /* font-family: 'Noto Sans KR', sans-serif; */
 }
 .col{
