--- a/reactStudy/shop-test/src/main/Main.css
+++ b/reactStudy/shop-test/src/main/Main.css
@@ -1,9 +1,10 @@
 .card{
     width: 263px;
-    height: 450px;
+    height: 420px;
     padding: 5px;
     margin-right: 45px;
     margin-bottom: 30px;
+    text-align: left;
 }
 .mainRow{
     text-align: center;
@@ -22,10 +23,27 @@
     height: 250px;
 }
 .card-body{
-    padding: 30px;
     width: 250px;
     height: 10px;
 }
 a{
     text-decoration: none;
+}
+.card-title{
+    height: 57px;
+    color: black;
+    margin-bottom: 15px;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical
+}
+.card-text{
+    height: 30px;
+    color: black;
+    margin-bottom: 1px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
