--- a/reactStudy/shop-test/src/comment/Comment.css
+++ b/reactStudy/shop-test/src/comment/Comment.css
@@ -1,5 +1,6 @@
 .commentWrapper{
-    margin: 8px;
+    margin-top: 10px;
+    margin-bottom: 10px;
     padding: 8px;
     display: flex;
     flex-direction: row;
@@ -7,7 +8,8 @@
     border-radius: 16px;
 }
 .commentWrapper2{
-    margin-left: 50px;;
+    margin-left: 50px;
+    margin-bottom: 5px;
     padding: 8px;
     display: flex;
     flex-direction: row;
