질문답변 페이징 틀만

--- a/reactStudy/shop-test/src/main/Main.css
+++ b/reactStudy/shop-test/src/main/Main.css
@@ -47,3 +47,8 @@ a{
     white-space: nowrap;
     overflow: hidden;
 }
+.pagenation {
+    margin-top: 20px;
+    margin-left: 260px;
+    text-align: center;
+}
