header 수정, spring - local to hostname

--- a/reactStudy/shop-test/src/item/ItemDtl.css
+++ b/reactStudy/shop-test/src/item/ItemDtl.css
@@ -139,7 +139,7 @@
 }
 .commentCommentText{
     color: black;
-    font-size: 16px;
+    font-size: 19px;
 }
 .commentRegisterBtn{
     border: none;
@@ -161,4 +161,7 @@
 }
 .commentAnswerForm{
     
+}
+.commentRegTime{
+    font-size: 16px;
 }
