--- a/reactStudy/shop-test/src/App.css
+++ b/reactStudy/shop-test/src/App.css
@@ -36,3 +36,11 @@
     transform: rotate(360deg);
   }
 }
+.wrapper1{
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+}
+.wrapper2{
+  flex: 1;
+}
